flask_app/interpreter/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> instrucciones
Rule 1     instrucciones -> instrucciones instruccion
Rule 2     instrucciones -> instruccion
Rule 3     instruccion -> CONSOLE PUNTO LOG PARIZQ expresiones PARDER PUNTOCOMA
Rule 4     instruccion -> declaracion
Rule 5     instruccion -> declaracion_const
Rule 6     instruccion -> declaracion_array
Rule 7     instruccion -> definition_interface
Rule 8     instruccion -> declaration_interface
Rule 9     declaracion -> VAR IDENTIFICADOR DOSPUNTOS tipo IGUAL expresion PUNTOCOMA
Rule 10    declaracion -> VAR IDENTIFICADOR IGUAL expresion PUNTOCOMA
Rule 11    declaracion -> VAR IDENTIFICADOR DOSPUNTOS tipo PUNTOCOMA
Rule 12    declaracion_const -> CONST IDENTIFICADOR DOSPUNTOS tipo IGUAL expresion PUNTOCOMA
Rule 13    declaracion_const -> CONST IDENTIFICADOR IGUAL expresion PUNTOCOMA
Rule 14    instruccion -> IDENTIFICADOR IGUAL expresion PUNTOCOMA
Rule 15    instruccion -> IDENTIFICADOR MAS IGUAL expresion PUNTOCOMA
Rule 16    instruccion -> IDENTIFICADOR MENOS IGUAL expresion PUNTOCOMA
Rule 17    instruccion -> inst_if
Rule 18    instruccion -> inst_while
Rule 19    instruccion -> inst_for
Rule 20    instruccion -> inst_switch
Rule 21    inst_if -> IF PARIZQ expresion PARDER sentencias ELSE sentencias
Rule 22    inst_if -> IF PARIZQ expresion PARDER sentencias
Rule 23    inst_if -> IF PARIZQ expresion PARDER sentencias ELSE inst_if
Rule 24    inst_while -> WHILE PARIZQ expresion PARDER sentencias
Rule 25    inst_for -> FOR PARIZQ declaracion expresion PUNTOCOMA unario PARDER sentencias
Rule 26    inst_for -> FOR PARIZQ VAR IDENTIFICADOR RES_OF expresion PARDER sentencias
Rule 27    unario -> IDENTIFICADOR DOBLEMAS
Rule 28    unario -> IDENTIFICADOR DOBLEMENOS
Rule 29    inst_switch -> SWITCH PARIZQ expresion PARDER LLAVEIZQ list_case LLAVEDER
Rule 30    list_case -> list_case inst_case
Rule 31    list_case -> inst_case
Rule 32    inst_case -> CASE expresion DOSPUNTOS instrucciones
Rule 33    inst_case -> DEFAULT DOSPUNTOS instrucciones
Rule 34    instruccion -> FUNCTION IDENTIFICADOR PARIZQ PARDER DOSPUNTOS tipo sentencias
Rule 35    instruccion -> FUNCTION IDENTIFICADOR PARIZQ PARDER sentencias
Rule 36    instruccion -> FUNCTION IDENTIFICADOR PARIZQ parametros_lista PARDER DOSPUNTOS tipo sentencias
Rule 37    instruccion -> FUNCTION IDENTIFICADOR PARIZQ parametros_lista PARDER sentencias
Rule 38    parametros_lista -> parametros_lista COMA parametro
Rule 39    parametros_lista -> parametro
Rule 40    parametro -> IDENTIFICADOR DOSPUNTOS tipo
Rule 41    parametro -> IDENTIFICADOR DOSPUNTOS tipo CORIZQ CORDER
Rule 42    instruccion -> IDENTIFICADOR PARIZQ expresiones PARDER PUNTOCOMA
Rule 43    instruccion -> IDENTIFICADOR PARIZQ PARDER PUNTOCOMA
Rule 44    sentencias -> LLAVEIZQ instrucciones LLAVEDER
Rule 45    instruccion -> BREAK PUNTOCOMA
Rule 46    instruccion -> CONTINUE PUNTOCOMA
Rule 47    instruccion -> RETURN PUNTOCOMA
Rule 48    instruccion -> RETURN expresion PUNTOCOMA
Rule 49    declaracion_array -> VAR IDENTIFICADOR DOSPUNTOS tipo tamano_matriz IGUAL array PUNTOCOMA
Rule 50    declaracion_array -> CONST IDENTIFICADOR DOSPUNTOS tipo tamano_matriz IGUAL array PUNTOCOMA
Rule 51    tamano_matriz -> tamano_matriz CORIZQ CORDER
Rule 52    tamano_matriz -> CORIZQ CORDER
Rule 53    list_valores -> CORIZQ list_valores2 CORDER
Rule 54    list_valores2 -> list_valores2 COMA CORIZQ arg CORDER
Rule 55    list_valores2 -> CORIZQ arg CORDER
Rule 56    arg -> list_valores2
Rule 57    arg -> expresiones
Rule 58    instruccion -> IDENTIFICADOR PUNTO RES_PUSH PARIZQ expresion PARDER PUNTOCOMA
Rule 59    instruccion -> IDENTIFICADOR index_matriz IGUAL expresion PUNTOCOMA
Rule 60    definition_interface -> INTERFACE IDENTIFICADOR LLAVEIZQ atributos_list LLAVEDER
Rule 61    atributos_list -> atributos_list IDENTIFICADOR DOSPUNTOS tipos_interface PUNTOCOMA
Rule 62    atributos_list -> IDENTIFICADOR DOSPUNTOS tipos_interface PUNTOCOMA
Rule 63    tipos_interface -> RES_STRING
Rule 64    tipos_interface -> RES_NUMBER
Rule 65    tipos_interface -> RES_FLOAT
Rule 66    tipos_interface -> RES_CHAR
Rule 67    tipos_interface -> RES_BOOLEAN
Rule 68    tipos_interface -> IDENTIFICADOR
Rule 69    declaration_interface -> VAR IDENTIFICADOR DOSPUNTOS IDENTIFICADOR IGUAL LLAVEIZQ atributos_insta LLAVEDER PUNTOCOMA
Rule 70    declaration_interface -> CONST IDENTIFICADOR DOSPUNTOS IDENTIFICADOR IGUAL LLAVEIZQ atributos_insta LLAVEDER PUNTOCOMA
Rule 71    atributos_insta -> atributos_insta COMA IDENTIFICADOR DOSPUNTOS expresion
Rule 72    atributos_insta -> IDENTIFICADOR DOSPUNTOS expresion
Rule 73    instruccion -> IDENTIFICADOR PUNTO atributos_anidados IGUAL expresion PUNTOCOMA
Rule 74    expresiones -> expresiones COMA expresion
Rule 75    expresiones -> expresion
Rule 76    expresion -> expresion MAS expresion
Rule 77    expresion -> expresion MENOS expresion
Rule 78    expresion -> expresion MULT expresion
Rule 79    expresion -> expresion DIV expresion
Rule 80    expresion -> expresion MOD expresion
Rule 81    expresion -> MENOS expresion
Rule 82    expresion -> PARIZQ expresion PARDER
Rule 83    expresion -> IDENTIFICADOR
Rule 84    expresion -> expresion IGUALDAD expresion
Rule 85    expresion -> expresion DESIGUALDAD expresion
Rule 86    expresion -> expresion MAYOR expresion
Rule 87    expresion -> expresion MAYORIGUAL expresion
Rule 88    expresion -> expresion MENOR expresion
Rule 89    expresion -> expresion MENORIGUAL expresion
Rule 90    expresion -> expresion AND expresion
Rule 91    expresion -> expresion OR expresion
Rule 92    expresion -> NOT expresion
Rule 93    expresion -> NUMBER
Rule 94    expresion -> CADENA
Rule 95    expresion -> FLOAT
Rule 96    expresion -> CHAR
Rule 97    expresion -> BOOL
Rule 98    tipo -> RES_STRING
Rule 99    tipo -> RES_NUMBER
Rule 100   tipo -> RES_FLOAT
Rule 101   tipo -> RES_CHAR
Rule 102   tipo -> RES_BOOLEAN
Rule 103   expresion -> IDENTIFICADOR PARIZQ expresiones PARDER
Rule 104   expresion -> IDENTIFICADOR PARIZQ PARDER
Rule 105   expresion -> expresion INTER expresion DOSPUNTOS expresion
Rule 106   expresion -> RES_PARSEINT PARIZQ expresion PARDER
Rule 107   expresion -> RES_PARSEFLOAT PARIZQ expresion PARDER
Rule 108   expresion -> expresion PUNTO RES_TOSTRING PARIZQ PARDER
Rule 109   expresion -> expresion PUNTO RES_TOLOWER PARIZQ PARDER
Rule 110   expresion -> expresion PUNTO RES_TOUPPER PARIZQ PARDER
Rule 111   expresion -> RES_TYPEOF expresion
Rule 112   array -> CORIZQ expresiones CORDER
Rule 113   array -> CORIZQ CORDER
Rule 114   array -> expresion
Rule 115   array -> list_valores
Rule 116   expresion -> expresion index_matriz
Rule 117   index_matriz -> index_matriz CORIZQ expresion CORDER
Rule 118   index_matriz -> CORIZQ expresion CORDER
Rule 119   expresion -> expresion PUNTO RES_POP PARIZQ PARDER
Rule 120   expresion -> expresion PUNTO RES_INDEXOF PARIZQ expresion PARDER
Rule 121   expresion -> expresion PUNTO RES_JOIN PARIZQ PARDER
Rule 122   expresion -> expresion PUNTO RES_LENGTH
Rule 123   expresion -> expresion PUNTO atributos_anidados
Rule 124   atributos_anidados -> atributos_anidados PUNTO IDENTIFICADOR
Rule 125   atributos_anidados -> IDENTIFICADOR
Rule 126   expresion -> RES_OBJECT PUNTO RES_KEYS PARIZQ expresion PARDER
Rule 127   expresion -> RES_OBJECT PUNTO RES_VALUES PARIZQ expresion PARDER

Terminals, with rules where they appear

AND                  : 90
BOOL                 : 97
BREAK                : 45
CADENA               : 94
CASE                 : 32
CHAR                 : 96
COMA                 : 38 54 71 74
CONSOLE              : 3
CONST                : 12 13 50 70
CONTINUE             : 46
CORDER               : 41 51 52 53 54 55 112 113 117 118
CORIZQ               : 41 51 52 53 54 55 112 113 117 118
DEFAULT              : 33
DESIGUALDAD          : 85
DIV                  : 79
DOBLEMAS             : 27
DOBLEMENOS           : 28
DOSPUNTOS            : 9 11 12 32 33 34 36 40 41 49 50 61 62 69 70 71 72 105
ELSE                 : 21 23
FLOAT                : 95
FOR                  : 25 26
FUNCTION             : 34 35 36 37
IDENTIFICADOR        : 9 10 11 12 13 14 15 16 26 27 28 34 35 36 37 40 41 42 43 49 50 58 59 60 61 62 68 69 69 70 70 71 72 73 83 103 104 124 125
IF                   : 21 22 23
IGUAL                : 9 10 12 13 14 15 16 49 50 59 69 70 73
IGUALDAD             : 84
INTER                : 105
INTERFACE            : 60
LLAVEDER             : 29 44 60 69 70
LLAVEIZQ             : 29 44 60 69 70
LOG                  : 3
MAS                  : 15 76
MAYOR                : 86
MAYORIGUAL           : 87
MENOR                : 88
MENORIGUAL           : 89
MENOS                : 16 77 81
MOD                  : 80
MULT                 : 78
NOT                  : 92
NUMBER               : 93
OR                   : 91
PARDER               : 3 21 22 23 24 25 26 29 34 35 36 37 42 43 58 82 103 104 106 107 108 109 110 119 120 121 126 127
PARIZQ               : 3 21 22 23 24 25 26 29 34 35 36 37 42 43 58 82 103 104 106 107 108 109 110 119 120 121 126 127
PUNTO                : 3 58 73 108 109 110 119 120 121 122 123 124 126 127
PUNTOCOMA            : 3 9 10 11 12 13 14 15 16 25 42 43 45 46 47 48 49 50 58 59 61 62 69 70 73
RES_BOOLEAN          : 67 102
RES_CHAR             : 66 101
RES_FLOAT            : 65 100
RES_INDEXOF          : 120
RES_JOIN             : 121
RES_KEYS             : 126
RES_LENGTH           : 122
RES_NUMBER           : 64 99
RES_OBJECT           : 126 127
RES_OF               : 26
RES_PARSEFLOAT       : 107
RES_PARSEINT         : 106
RES_POP              : 119
RES_PUSH             : 58
RES_STRING           : 63 98
RES_TOLOWER          : 109
RES_TOSTRING         : 108
RES_TOUPPER          : 110
RES_TYPEOF           : 111
RES_VALUES           : 127
RETURN               : 47 48
SWITCH               : 29
VAR                  : 9 10 11 26 49 69
WHILE                : 24
error                : 

Nonterminals, with rules where they appear

arg                  : 54 55
array                : 49 50
atributos_anidados   : 73 123 124
atributos_insta      : 69 70 71
atributos_list       : 60 61
declaracion          : 4 25
declaracion_array    : 6
declaracion_const    : 5
declaration_interface : 8
definition_interface : 7
expresion            : 9 10 12 13 14 15 16 21 22 23 24 25 26 29 32 48 58 59 71 72 73 74 75 76 76 77 77 78 78 79 79 80 80 81 82 84 84 85 85 86 86 87 87 88 88 89 89 90 90 91 91 92 105 105 105 106 107 108 109 110 111 114 116 117 118 119 120 120 121 122 123 126 127
expresiones          : 3 42 57 74 103 112
index_matriz         : 59 116 117
inst_case            : 30 31
inst_for             : 19
inst_if              : 17 23
inst_switch          : 20
inst_while           : 18
instruccion          : 1 2
instrucciones        : 1 32 33 44 0
list_case            : 29 30
list_valores         : 115
list_valores2        : 53 54 56
parametro            : 38 39
parametros_lista     : 36 37 38
sentencias           : 21 21 22 23 24 25 26 34 35 36 37
tamano_matriz        : 49 50 51
tipo                 : 9 11 12 34 36 40 41 49 50
tipos_interface      : 61 62
unario               : 25

Parsing method: LALR

state 0

    (0) S' -> . instrucciones
    (1) instrucciones -> . instrucciones instruccion
    (2) instrucciones -> . instruccion
    (3) instruccion -> . CONSOLE PUNTO LOG PARIZQ expresiones PARDER PUNTOCOMA
    (4) instruccion -> . declaracion
    (5) instruccion -> . declaracion_const
    (6) instruccion -> . declaracion_array
    (7) instruccion -> . definition_interface
    (8) instruccion -> . declaration_interface
    (14) instruccion -> . IDENTIFICADOR IGUAL expresion PUNTOCOMA
    (15) instruccion -> . IDENTIFICADOR MAS IGUAL expresion PUNTOCOMA
    (16) instruccion -> . IDENTIFICADOR MENOS IGUAL expresion PUNTOCOMA
    (17) instruccion -> . inst_if
    (18) instruccion -> . inst_while
    (19) instruccion -> . inst_for
    (20) instruccion -> . inst_switch
    (34) instruccion -> . FUNCTION IDENTIFICADOR PARIZQ PARDER DOSPUNTOS tipo sentencias
    (35) instruccion -> . FUNCTION IDENTIFICADOR PARIZQ PARDER sentencias
    (36) instruccion -> . FUNCTION IDENTIFICADOR PARIZQ parametros_lista PARDER DOSPUNTOS tipo sentencias
    (37) instruccion -> . FUNCTION IDENTIFICADOR PARIZQ parametros_lista PARDER sentencias
    (42) instruccion -> . IDENTIFICADOR PARIZQ expresiones PARDER PUNTOCOMA
    (43) instruccion -> . IDENTIFICADOR PARIZQ PARDER PUNTOCOMA
    (45) instruccion -> . BREAK PUNTOCOMA
    (46) instruccion -> . CONTINUE PUNTOCOMA
    (47) instruccion -> . RETURN PUNTOCOMA
    (48) instruccion -> . RETURN expresion PUNTOCOMA
    (58) instruccion -> . IDENTIFICADOR PUNTO RES_PUSH PARIZQ expresion PARDER PUNTOCOMA
    (59) instruccion -> . IDENTIFICADOR index_matriz IGUAL expresion PUNTOCOMA
    (73) instruccion -> . IDENTIFICADOR PUNTO atributos_anidados IGUAL expresion PUNTOCOMA
    (9) declaracion -> . VAR IDENTIFICADOR DOSPUNTOS tipo IGUAL expresion PUNTOCOMA
    (10) declaracion -> . VAR IDENTIFICADOR IGUAL expresion PUNTOCOMA
    (11) declaracion -> . VAR IDENTIFICADOR DOSPUNTOS tipo PUNTOCOMA
    (12) declaracion_const -> . CONST IDENTIFICADOR DOSPUNTOS tipo IGUAL expresion PUNTOCOMA
    (13) declaracion_const -> . CONST IDENTIFICADOR IGUAL expresion PUNTOCOMA
    (49) declaracion_array -> . VAR IDENTIFICADOR DOSPUNTOS tipo tamano_matriz IGUAL array PUNTOCOMA
    (50) declaracion_array -> . CONST IDENTIFICADOR DOSPUNTOS tipo tamano_matriz IGUAL array PUNTOCOMA
    (60) definition_interface -> . INTERFACE IDENTIFICADOR LLAVEIZQ atributos_list LLAVEDER
    (69) declaration_interface -> . VAR IDENTIFICADOR DOSPUNTOS IDENTIFICADOR IGUAL LLAVEIZQ atributos_insta LLAVEDER PUNTOCOMA
    (70) declaration_interface -> . CONST IDENTIFICADOR DOSPUNTOS IDENTIFICADOR IGUAL LLAVEIZQ atributos_insta LLAVEDER PUNTOCOMA
    (21) inst_if -> . IF PARIZQ expresion PARDER sentencias ELSE sentencias
    (22) inst_if -> . IF PARIZQ expresion PARDER sentencias
    (23) inst_if -> . IF PARIZQ expresion PARDER sentencias ELSE inst_if
    (24) inst_while -> . WHILE PARIZQ expresion PARDER sentencias
    (25) inst_for -> . FOR PARIZQ declaracion expresion PUNTOCOMA unario PARDER sentencias
    (26) inst_for -> . FOR PARIZQ VAR IDENTIFICADOR RES_OF expresion PARDER sentencias
    (29) inst_switch -> . SWITCH PARIZQ expresion PARDER LLAVEIZQ list_case LLAVEDER

    CONSOLE         shift and go to state 3
    IDENTIFICADOR   shift and go to state 9
    FUNCTION        shift and go to state 14
    BREAK           shift and go to state 15
    CONTINUE        shift and go to state 16
    RETURN          shift and go to state 17
    VAR             shift and go to state 18
    CONST           shift and go to state 19
    INTERFACE       shift and go to state 20
    IF              shift and go to state 21
    WHILE           shift and go to state 22
    FOR             shift and go to state 23
    SWITCH          shift and go to state 24

    instrucciones                  shift and go to state 1
    instruccion                    shift and go to state 2
    declaracion                    shift and go to state 4
    declaracion_const              shift and go to state 5
    declaracion_array              shift and go to state 6
    definition_interface           shift and go to state 7
    declaration_interface          shift and go to state 8
    inst_if                        shift and go to state 10
    inst_while                     shift and go to state 11
    inst_for                       shift and go to state 12
    inst_switch                    shift and go to state 13

state 1

    (0) S' -> instrucciones .
    (1) instrucciones -> instrucciones . instruccion
    (3) instruccion -> . CONSOLE PUNTO LOG PARIZQ expresiones PARDER PUNTOCOMA
    (4) instruccion -> . declaracion
    (5) instruccion -> . declaracion_const
    (6) instruccion -> . declaracion_array
    (7) instruccion -> . definition_interface
    (8) instruccion -> . declaration_interface
    (14) instruccion -> . IDENTIFICADOR IGUAL expresion PUNTOCOMA
    (15) instruccion -> . IDENTIFICADOR MAS IGUAL expresion PUNTOCOMA
    (16) instruccion -> . IDENTIFICADOR MENOS IGUAL expresion PUNTOCOMA
    (17) instruccion -> . inst_if
    (18) instruccion -> . inst_while
    (19) instruccion -> . inst_for
    (20) instruccion -> . inst_switch
    (34) instruccion -> . FUNCTION IDENTIFICADOR PARIZQ PARDER DOSPUNTOS tipo sentencias
    (35) instruccion -> . FUNCTION IDENTIFICADOR PARIZQ PARDER sentencias
    (36) instruccion -> . FUNCTION IDENTIFICADOR PARIZQ parametros_lista PARDER DOSPUNTOS tipo sentencias
    (37) instruccion -> . FUNCTION IDENTIFICADOR PARIZQ parametros_lista PARDER sentencias
    (42) instruccion -> . IDENTIFICADOR PARIZQ expresiones PARDER PUNTOCOMA
    (43) instruccion -> . IDENTIFICADOR PARIZQ PARDER PUNTOCOMA
    (45) instruccion -> . BREAK PUNTOCOMA
    (46) instruccion -> . CONTINUE PUNTOCOMA
    (47) instruccion -> . RETURN PUNTOCOMA
    (48) instruccion -> . RETURN expresion PUNTOCOMA
    (58) instruccion -> . IDENTIFICADOR PUNTO RES_PUSH PARIZQ expresion PARDER PUNTOCOMA
    (59) instruccion -> . IDENTIFICADOR index_matriz IGUAL expresion PUNTOCOMA
    (73) instruccion -> . IDENTIFICADOR PUNTO atributos_anidados IGUAL expresion PUNTOCOMA
    (9) declaracion -> . VAR IDENTIFICADOR DOSPUNTOS tipo IGUAL expresion PUNTOCOMA
    (10) declaracion -> . VAR IDENTIFICADOR IGUAL expresion PUNTOCOMA
    (11) declaracion -> . VAR IDENTIFICADOR DOSPUNTOS tipo PUNTOCOMA
    (12) declaracion_const -> . CONST IDENTIFICADOR DOSPUNTOS tipo IGUAL expresion PUNTOCOMA
    (13) declaracion_const -> . CONST IDENTIFICADOR IGUAL expresion PUNTOCOMA
    (49) declaracion_array -> . VAR IDENTIFICADOR DOSPUNTOS tipo tamano_matriz IGUAL array PUNTOCOMA
    (50) declaracion_array -> . CONST IDENTIFICADOR DOSPUNTOS tipo tamano_matriz IGUAL array PUNTOCOMA
    (60) definition_interface -> . INTERFACE IDENTIFICADOR LLAVEIZQ atributos_list LLAVEDER
    (69) declaration_interface -> . VAR IDENTIFICADOR DOSPUNTOS IDENTIFICADOR IGUAL LLAVEIZQ atributos_insta LLAVEDER PUNTOCOMA
    (70) declaration_interface -> . CONST IDENTIFICADOR DOSPUNTOS IDENTIFICADOR IGUAL LLAVEIZQ atributos_insta LLAVEDER PUNTOCOMA
    (21) inst_if -> . IF PARIZQ expresion PARDER sentencias ELSE sentencias
    (22) inst_if -> . IF PARIZQ expresion PARDER sentencias
    (23) inst_if -> . IF PARIZQ expresion PARDER sentencias ELSE inst_if
    (24) inst_while -> . WHILE PARIZQ expresion PARDER sentencias
    (25) inst_for -> . FOR PARIZQ declaracion expresion PUNTOCOMA unario PARDER sentencias
    (26) inst_for -> . FOR PARIZQ VAR IDENTIFICADOR RES_OF expresion PARDER sentencias
    (29) inst_switch -> . SWITCH PARIZQ expresion PARDER LLAVEIZQ list_case LLAVEDER

    CONSOLE         shift and go to state 3
    IDENTIFICADOR   shift and go to state 9
    FUNCTION        shift and go to state 14
    BREAK           shift and go to state 15
    CONTINUE        shift and go to state 16
    RETURN          shift and go to state 17
    VAR             shift and go to state 18
    CONST           shift and go to state 19
    INTERFACE       shift and go to state 20
    IF              shift and go to state 21
    WHILE           shift and go to state 22
    FOR             shift and go to state 23
    SWITCH          shift and go to state 24

    instruccion                    shift and go to state 25
    declaracion                    shift and go to state 4
    declaracion_const              shift and go to state 5
    declaracion_array              shift and go to state 6
    definition_interface           shift and go to state 7
    declaration_interface          shift and go to state 8
    inst_if                        shift and go to state 10
    inst_while                     shift and go to state 11
    inst_for                       shift and go to state 12
    inst_switch                    shift and go to state 13

state 2

    (2) instrucciones -> instruccion .

    CONSOLE         reduce using rule 2 (instrucciones -> instruccion .)
    IDENTIFICADOR   reduce using rule 2 (instrucciones -> instruccion .)
    FUNCTION        reduce using rule 2 (instrucciones -> instruccion .)
    BREAK           reduce using rule 2 (instrucciones -> instruccion .)
    CONTINUE        reduce using rule 2 (instrucciones -> instruccion .)
    RETURN          reduce using rule 2 (instrucciones -> instruccion .)
    VAR             reduce using rule 2 (instrucciones -> instruccion .)
    CONST           reduce using rule 2 (instrucciones -> instruccion .)
    INTERFACE       reduce using rule 2 (instrucciones -> instruccion .)
    IF              reduce using rule 2 (instrucciones -> instruccion .)
    WHILE           reduce using rule 2 (instrucciones -> instruccion .)
    FOR             reduce using rule 2 (instrucciones -> instruccion .)
    SWITCH          reduce using rule 2 (instrucciones -> instruccion .)
    $end            reduce using rule 2 (instrucciones -> instruccion .)
    LLAVEDER        reduce using rule 2 (instrucciones -> instruccion .)
    CASE            reduce using rule 2 (instrucciones -> instruccion .)
    DEFAULT         reduce using rule 2 (instrucciones -> instruccion .)


state 3

    (3) instruccion -> CONSOLE . PUNTO LOG PARIZQ expresiones PARDER PUNTOCOMA

    PUNTO           shift and go to state 26


state 4

    (4) instruccion -> declaracion .

    CONSOLE         reduce using rule 4 (instruccion -> declaracion .)
    IDENTIFICADOR   reduce using rule 4 (instruccion -> declaracion .)
    FUNCTION        reduce using rule 4 (instruccion -> declaracion .)
    BREAK           reduce using rule 4 (instruccion -> declaracion .)
    CONTINUE        reduce using rule 4 (instruccion -> declaracion .)
    RETURN          reduce using rule 4 (instruccion -> declaracion .)
    VAR             reduce using rule 4 (instruccion -> declaracion .)
    CONST           reduce using rule 4 (instruccion -> declaracion .)
    INTERFACE       reduce using rule 4 (instruccion -> declaracion .)
    IF              reduce using rule 4 (instruccion -> declaracion .)
    WHILE           reduce using rule 4 (instruccion -> declaracion .)
    FOR             reduce using rule 4 (instruccion -> declaracion .)
    SWITCH          reduce using rule 4 (instruccion -> declaracion .)
    $end            reduce using rule 4 (instruccion -> declaracion .)
    LLAVEDER        reduce using rule 4 (instruccion -> declaracion .)
    CASE            reduce using rule 4 (instruccion -> declaracion .)
    DEFAULT         reduce using rule 4 (instruccion -> declaracion .)


state 5

    (5) instruccion -> declaracion_const .

    CONSOLE         reduce using rule 5 (instruccion -> declaracion_const .)
    IDENTIFICADOR   reduce using rule 5 (instruccion -> declaracion_const .)
    FUNCTION        reduce using rule 5 (instruccion -> declaracion_const .)
    BREAK           reduce using rule 5 (instruccion -> declaracion_const .)
    CONTINUE        reduce using rule 5 (instruccion -> declaracion_const .)
    RETURN          reduce using rule 5 (instruccion -> declaracion_const .)
    VAR             reduce using rule 5 (instruccion -> declaracion_const .)
    CONST           reduce using rule 5 (instruccion -> declaracion_const .)
    INTERFACE       reduce using rule 5 (instruccion -> declaracion_const .)
    IF              reduce using rule 5 (instruccion -> declaracion_const .)
    WHILE           reduce using rule 5 (instruccion -> declaracion_const .)
    FOR             reduce using rule 5 (instruccion -> declaracion_const .)
    SWITCH          reduce using rule 5 (instruccion -> declaracion_const .)
    $end            reduce using rule 5 (instruccion -> declaracion_const .)
    LLAVEDER        reduce using rule 5 (instruccion -> declaracion_const .)
    CASE            reduce using rule 5 (instruccion -> declaracion_const .)
    DEFAULT         reduce using rule 5 (instruccion -> declaracion_const .)


state 6

    (6) instruccion -> declaracion_array .

    CONSOLE         reduce using rule 6 (instruccion -> declaracion_array .)
    IDENTIFICADOR   reduce using rule 6 (instruccion -> declaracion_array .)
    FUNCTION        reduce using rule 6 (instruccion -> declaracion_array .)
    BREAK           reduce using rule 6 (instruccion -> declaracion_array .)
    CONTINUE        reduce using rule 6 (instruccion -> declaracion_array .)
    RETURN          reduce using rule 6 (instruccion -> declaracion_array .)
    VAR             reduce using rule 6 (instruccion -> declaracion_array .)
    CONST           reduce using rule 6 (instruccion -> declaracion_array .)
    INTERFACE       reduce using rule 6 (instruccion -> declaracion_array .)
    IF              reduce using rule 6 (instruccion -> declaracion_array .)
    WHILE           reduce using rule 6 (instruccion -> declaracion_array .)
    FOR             reduce using rule 6 (instruccion -> declaracion_array .)
    SWITCH          reduce using rule 6 (instruccion -> declaracion_array .)
    $end            reduce using rule 6 (instruccion -> declaracion_array .)
    LLAVEDER        reduce using rule 6 (instruccion -> declaracion_array .)
    CASE            reduce using rule 6 (instruccion -> declaracion_array .)
    DEFAULT         reduce using rule 6 (instruccion -> declaracion_array .)


state 7

    (7) instruccion -> definition_interface .

    CONSOLE         reduce using rule 7 (instruccion -> definition_interface .)
    IDENTIFICADOR   reduce using rule 7 (instruccion -> definition_interface .)
    FUNCTION        reduce using rule 7 (instruccion -> definition_interface .)
    BREAK           reduce using rule 7 (instruccion -> definition_interface .)
    CONTINUE        reduce using rule 7 (instruccion -> definition_interface .)
    RETURN          reduce using rule 7 (instruccion -> definition_interface .)
    VAR             reduce using rule 7 (instruccion -> definition_interface .)
    CONST           reduce using rule 7 (instruccion -> definition_interface .)
    INTERFACE       reduce using rule 7 (instruccion -> definition_interface .)
    IF              reduce using rule 7 (instruccion -> definition_interface .)
    WHILE           reduce using rule 7 (instruccion -> definition_interface .)
    FOR             reduce using rule 7 (instruccion -> definition_interface .)
    SWITCH          reduce using rule 7 (instruccion -> definition_interface .)
    $end            reduce using rule 7 (instruccion -> definition_interface .)
    LLAVEDER        reduce using rule 7 (instruccion -> definition_interface .)
    CASE            reduce using rule 7 (instruccion -> definition_interface .)
    DEFAULT         reduce using rule 7 (instruccion -> definition_interface .)


state 8

    (8) instruccion -> declaration_interface .

    CONSOLE         reduce using rule 8 (instruccion -> declaration_interface .)
    IDENTIFICADOR   reduce using rule 8 (instruccion -> declaration_interface .)
    FUNCTION        reduce using rule 8 (instruccion -> declaration_interface .)
    BREAK           reduce using rule 8 (instruccion -> declaration_interface .)
    CONTINUE        reduce using rule 8 (instruccion -> declaration_interface .)
    RETURN          reduce using rule 8 (instruccion -> declaration_interface .)
    VAR             reduce using rule 8 (instruccion -> declaration_interface .)
    CONST           reduce using rule 8 (instruccion -> declaration_interface .)
    INTERFACE       reduce using rule 8 (instruccion -> declaration_interface .)
    IF              reduce using rule 8 (instruccion -> declaration_interface .)
    WHILE           reduce using rule 8 (instruccion -> declaration_interface .)
    FOR             reduce using rule 8 (instruccion -> declaration_interface .)
    SWITCH          reduce using rule 8 (instruccion -> declaration_interface .)
    $end            reduce using rule 8 (instruccion -> declaration_interface .)
    LLAVEDER        reduce using rule 8 (instruccion -> declaration_interface .)
    CASE            reduce using rule 8 (instruccion -> declaration_interface .)
    DEFAULT         reduce using rule 8 (instruccion -> declaration_interface .)


state 9

    (14) instruccion -> IDENTIFICADOR . IGUAL expresion PUNTOCOMA
    (15) instruccion -> IDENTIFICADOR . MAS IGUAL expresion PUNTOCOMA
    (16) instruccion -> IDENTIFICADOR . MENOS IGUAL expresion PUNTOCOMA
    (42) instruccion -> IDENTIFICADOR . PARIZQ expresiones PARDER PUNTOCOMA
    (43) instruccion -> IDENTIFICADOR . PARIZQ PARDER PUNTOCOMA
    (58) instruccion -> IDENTIFICADOR . PUNTO RES_PUSH PARIZQ expresion PARDER PUNTOCOMA
    (59) instruccion -> IDENTIFICADOR . index_matriz IGUAL expresion PUNTOCOMA
    (73) instruccion -> IDENTIFICADOR . PUNTO atributos_anidados IGUAL expresion PUNTOCOMA
    (117) index_matriz -> . index_matriz CORIZQ expresion CORDER
    (118) index_matriz -> . CORIZQ expresion CORDER

    IGUAL           shift and go to state 27
    MAS             shift and go to state 28
    MENOS           shift and go to state 29
    PARIZQ          shift and go to state 30
    PUNTO           shift and go to state 31
    CORIZQ          shift and go to state 33

    index_matriz                   shift and go to state 32

state 10

    (17) instruccion -> inst_if .

    CONSOLE         reduce using rule 17 (instruccion -> inst_if .)
    IDENTIFICADOR   reduce using rule 17 (instruccion -> inst_if .)
    FUNCTION        reduce using rule 17 (instruccion -> inst_if .)
    BREAK           reduce using rule 17 (instruccion -> inst_if .)
    CONTINUE        reduce using rule 17 (instruccion -> inst_if .)
    RETURN          reduce using rule 17 (instruccion -> inst_if .)
    VAR             reduce using rule 17 (instruccion -> inst_if .)
    CONST           reduce using rule 17 (instruccion -> inst_if .)
    INTERFACE       reduce using rule 17 (instruccion -> inst_if .)
    IF              reduce using rule 17 (instruccion -> inst_if .)
    WHILE           reduce using rule 17 (instruccion -> inst_if .)
    FOR             reduce using rule 17 (instruccion -> inst_if .)
    SWITCH          reduce using rule 17 (instruccion -> inst_if .)
    $end            reduce using rule 17 (instruccion -> inst_if .)
    LLAVEDER        reduce using rule 17 (instruccion -> inst_if .)
    CASE            reduce using rule 17 (instruccion -> inst_if .)
    DEFAULT         reduce using rule 17 (instruccion -> inst_if .)


state 11

    (18) instruccion -> inst_while .
